[tool.poetry]
name = "lmaobot"
version = "0.6.9"
description = "Dank meme bot for Chatango using ch.py"
authors = ["LmaoLover <hello@lmao.love>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
requests = "^2.28.1"
pytz = "^2022.2.1"
lassie = "^0.11.11"
PyYAML = "^6.0"
python-twitter = "^3.5"
youtube-search = "^2.1.1"
wolframalpha = "^5.0.0"
openai = "^0.27.2"
python-dotenv = "^0.21.0"
chatango-lib = {git = "https://github.com/LmaoLover/chatango-lib.git", rev = "master"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
