[tool.poetry]
name = "lmaobot"
version = "0.6.9"
description = "Dank meme bot for Chatango using ch.py"
authors = ["LmaoLover <hello@lmao.love>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
requests = "^2.28.1"
pytz = "^2022.2.1"
PyYAML = "^6.0"
youtube-search = "^2.1.1"
wolframalpha = "^5.0.0"
openai = "^1.3.7"
python-dotenv = "^0.21.0"
lxml = "^4.9.3"
beautifulsoup4 = "^4.12.2"
html5lib = "^1.1"
# chatango-lib = "^1.5.4"
chatango-lib = {path = "../chatango-lib", develop = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
